--- a/events.html
+++ b/events.html
@@ -139,9 +139,7 @@
         </div>
     </div>
     
-    <audio id="bgmusic" autoplay loop>
-        <source src="bgmusic.mp4">
-    </audio>
+    <iframe src="bgmusic.mp4" allow="autoplay" style="display:none" id="bgmusic"></iframe>
 
     <script>
         let vid = document.getElementById("bgmusic");
