--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <video src="bgvideo.mp4" autoplay muted loop></video>
                 <br>
                 <br>
-                <h1 align="center" size>KYOTO UNIVERSITY CULTURAL FESTIVAL </h1>
+                <h1 align="center">KYOTO UNIVERSITY CULTURAL FESTIVAL </h1>
             </div>
             <!-- END OF HERO SECTION -->
             <!-- DESCRIPTION -->
@@ -149,9 +149,7 @@
         <br>
         <br>
 
-        <audio id="bgmusic" autoplay loop>
-            <source src="bgmusic.mp4">
-        </audio>
+        <iframe src="bgmusic.mp4" allow="autoplay" style="display:none" id="bgmusic"></iframe>
 
     </div>
     <!-- END OF MAIN SECTION -->
