--- a/CultureFes/events.html
+++ b/CultureFes/events.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kyoto University Culture Festival</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
         /* GLOBAL STYLE */
@@ -138,13 +138,5 @@
             </div>
         </div>
     </div>
-    
-    <iframe src="bgmusic.mp4" allow="autoplay" style="display:none" id="bgmusic"></iframe>
-
-    <script>
-        let vid = document.getElementById("bgmusic");
-        vid.volume = 0.3;
-    </script>
-
 </body>
 </html>
