--- a/CultureFes/index.html
+++ b/CultureFes/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kyoto University Culture Festival</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap');
         /* GLOBAL STYLE */
@@ -149,7 +149,9 @@
         <br>
         <br>
 
-        <iframe src="bgmusic.mp4" allow="autoplay" style="display:none" id="bgmusic"></iframe>
+        <audio id="bgmusicc" preload="auto" autoplay loop>
+            <source src="bgmusic.mp4" type="audio/mp3">
+        </audio>
 
     </div>
     <!-- END OF MAIN SECTION -->
@@ -159,7 +161,7 @@
             alert("Feedback submitted!");
         }
 
-        let vid = document.getElementById("bgmusic");
+        let vid = document.getElementById("bgmusicc");
         vid.volume = 0.3;
     </script>
 
