--- a/CultureFes/index.html
+++ b/CultureFes/index.html
@@ -83,6 +83,7 @@
     <!-- NAVIGATION -->
     <div>
         <div class="nav" align="center">
+            <span style="position: absolute; top: 1rem; left: 35rem">&#40Click Home again to play audio&#41</span>
             <span><a href="index.html">Home</a></span> |
             <span><a href="info.html">Info</a></span> |
             <span><a href="events.html">Activities</a></span> 
