--- a/CultureFes/info.html
+++ b/CultureFes/info.html
@@ -129,6 +129,17 @@
         </div>
         <br>
         <br>
+
+        <audio id="bgmusicc" preload="auto" autoplay loop>
+            <source src="sad dream.mp3" type="audio/mp3">
+        </audio>
+
     </div>    
+
+    <script>
+        let vid = document.getElementById("bgmusicc");
+        vid.volume = 0.3;
+    </script>
+    
 </body>
 </html>
