--- a/CultureFes/events.html
+++ b/CultureFes/events.html
@@ -63,10 +63,15 @@
             width: 250px;
             padding: 2px;
             border-radius: 4px;
+            box-shadow: 0px 2px 25px gray;
         }
         
         img {
             box-shadow: 0px 1px 10px black;
+        }
+
+        b {
+            color: cyan;
         }
 
     </style>
@@ -136,6 +141,8 @@
                     <img src="theater.jpg" width="650px">
                 </div>
             </div>
+            <br>
+            <br>
         </div>
     </div>
 </body>
