--- a/CultureFes/index.html
+++ b/CultureFes/index.html
@@ -65,6 +65,7 @@
             padding: 2px;
             background-color: #2f2f2f;
             border-radius: 5px;
+            box-shadow: 0px 2px 10px gray;
         }
 
         p {
