--- a/CultureFes/index.html
+++ b/CultureFes/index.html
@@ -164,15 +164,15 @@
                         <form>
                             <div class="input-container">
                                 <label for="name">Name</label>
-                                <input type="text" name="name" id="name">
+                                <input type="text" name="name" id="name" required>
                             </div>
                             <div class="input-container">
                                 <label for="email">Email</label>
-                                <input type="email" name="email" id="email">
+                                <input type="email" name="email" id="email" required>
                             </div>
                             <div class="input-container">
                                 <label for="msg">Message</label>
-                               <textarea name="msg" id="msg" cols="30" rows="10"></textarea>
+                               <textarea name="msg" id="msg" cols="30" rows="10" required></textarea>
                             </div>
                             <button onclick="Submit()" type="submit">SUBMIT</button>
                         </form>
