--- a/CultureFes/index.html
+++ b/CultureFes/index.html
@@ -180,6 +180,9 @@
                 </div>
             </div>
         </section>
+
+        <audio src="bgmusic.mp3" autoplay loop controls></audio>
+
     </main>
 
     <!-- END OF MAIN -->
