--- a/LAB/js.html
+++ b/LAB/js.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="main-container">
-        <!-- UPPER PART OF SYSTEM -->
+        <!-- UPPER PART OF SYSTEM (Bill confirm, Bill total, Purhcase button)-->
         <div class="bill-container">
            <div class="bill-amount">
                 <div>
@@ -29,7 +29,7 @@
         </div>
         <!-- END OF UPPER PART -->
         <div class="sub-container">
-            <!-- NAVIGATION ON LEFT SIDE -->
+            <!-- NAVIGATION ON LEFT SIDE (Beverages, Bread, & Canned)-->
             <aside>
                 <nav>
                     <ul>
